Bug 95403 - [11 Regression] ICE in nested_in_vect_loop_p at gcc/tree-vectorizer.h:1260 since r11-689-ge31cd607e999ca6a
Summary: [11 Regression] ICE in nested_in_vect_loop_p at gcc/tree-vectorizer.h:1260 si...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: tree-optimization (show other bugs)
Version: 11.0
: P3 normal
Target Milestone: 11.0
Assignee: Richard Biener
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks: spec
  Show dependency treegraph
 
Reported: 2020-05-29 07:35 UTC by Martin Liška
Modified: 2020-05-29 09:03 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2020-05-29 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Liška 2020-05-29 07:35:54 UTC
It's reduced from 454.calculix:

$ cat deuldlag.f
      subroutine deuldlag(xi,et,ze,xlag,xeul,xj,xs)
      real*8 shp(3,20),xs(3,3),xlag(3,20),xeul(3,20)
      do i=1,3
        do j=1,3
        enddo
      enddo
      do i=1,3
        do j=1,3
          xs(i,j)=0.d0
          do k=1,20
            xs(i,j)=xs(i,j)+xeul(i,k)*shp(j,k)
          enddo
        enddo
      enddo
      end

$ gcc -O3 deuldlag.f -c
during GIMPLE pass: vect
deuldlag.f:1:0:

    1 |       subroutine deuldlag(xi,et,ze,xlag,xeul,xj,xs)
      | 
internal compiler error: Segmentation fault
0xeb3cff crash_signal
	/home/marxin/Programming/gcc/gcc/toplev.c:328
0x7ffff78f6f3f ???
	/usr/src/debug/glibc-2.31-5.1.x86_64/signal/../sysdeps/unix/sysv/linux/x86_64/sigaction.c:0
0x10f94e3 nested_in_vect_loop_p
	/home/marxin/Programming/gcc/gcc/tree-vectorizer.h:1260
0x10f94e3 vect_init_vector_1
	/home/marxin/Programming/gcc/gcc/tree-vect-stmts.c:1333
0x10f972a vect_init_vector(vec_info*, _stmt_vec_info*, tree_node*, tree_node*, gimple_stmt_iterator*)
	/home/marxin/Programming/gcc/gcc/tree-vect-stmts.c:1418
0x1144449 vect_create_constant_vectors
	/home/marxin/Programming/gcc/gcc/tree-vect-slp.c:3745
0x1144449 vect_schedule_slp_instance
	/home/marxin/Programming/gcc/gcc/tree-vect-slp.c:4066
0x1144938 vect_schedule_slp_instance
	/home/marxin/Programming/gcc/gcc/tree-vect-slp.c:4071
0x114a982 vect_schedule_slp(vec_info*)
	/home/marxin/Programming/gcc/gcc/tree-vect-slp.c:4303
0x113543e vect_transform_loop(_loop_vec_info*, gimple*)
	/home/marxin/Programming/gcc/gcc/tree-vect-loop.c:8753
0x1150edf try_vectorize_loop_1
	/home/marxin/Programming/gcc/gcc/tree-vectorizer.c:988
0x1151b89 vectorize_loops()
	/home/marxin/Programming/gcc/gcc/tree-vectorizer.c:1125
Please submit a full bug report,
with preprocessed source if appropriate.
Please include the complete backtrace with any bug report.
See <https://gcc.gnu.org/bugs/> for instructions.
Comment 1 Richard Biener 2020-05-29 08:02:02 UTC
Mine.
Comment 2 GCC Commits 2020-05-29 09:02:47 UTC
The master branch has been updated by Richard Biener <rguenth@gcc.gnu.org>:

https://gcc.gnu.org/g:233ecb5e2c5a769429279afbbf7d275cb3940cde

commit r11-713-g233ecb5e2c5a769429279afbbf7d275cb3940cde
Author: Richard Biener <rguenther@suse.de>
Date:   Fri May 29 10:16:38 2020 +0200

    tree-optimization/95403 - guard vect_init_vector_1 against NULL stmt_info
    
    2020-05-29  Richard Biener  <rguenther@suse.de>
    
            PR tree-optimization/95403
            * tree-vect-stmts.c (vect_init_vector_1): Guard against NULL
            stmt_vinfo.
    
            * gfortran.dg/vect/pr95403.f: New testcase.
Comment 3 Richard Biener 2020-05-29 09:03:18 UTC
Fixed.