tree-optimization/95403 - guard vect_init_vector_1 against NULL stmt_info

2020-05-29  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/95403
	* tree-vect-stmts.c (vect_init_vector_1): Guard against NULL
	stmt_vinfo.

	* gfortran.dg/vect/pr95403.f: New testcase.